FIX: long text wrapping and error boundary

--- a/src/pages/home/components/card/card-styles.scss
+++ b/src/pages/home/components/card/card-styles.scss
@@ -1,3 +1,25 @@
+.card-overflow {
+    &::after {
+        content: '∙∙∙';
+
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+
+        text-align: center;
+        font-size: 15px;
+        font-weight: 500;
+        color: rgba(0, 0, 0, 0.87);
+        
+        margin: 6px 0;
+    }
+
+    p:nth-of-type(1n+4) {
+        display: none;
+    }
+}
+
 .card {
     position: relative;
 
